# WinGetGUI

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README_CN.md  WingetGUI.py  debug_winget.py  pyproject.toml  requirements.txt  test_export.py  test_json.py  test_parsing_v2.py  upload_pypi.bat  upload_pypi.sh
wingetgui/: CHANGELOG  LICENSE  README.rst  __init__.py  __main__.py  packages.json  pyproject.toml
wingetgui/src/wingetgui/: __main__.py  app.py
