[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wingetgui"
dynamic = ["version"]
description = "A graphical user interface for Windows Package Manager (winget) built with PySide6"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
authors = [
    { name = "WinGetGUI Contributors" },
]
keywords = ["winget", "windows", "package-manager", "gui", "pyside6", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "PySide6-Essentials>=6.5",
]

[project.scripts]
wingetgui = "wingetgui.app:main"

[project.urls]
Homepage = "https://github.com/cycleuser/WinGetGUI"
Repository = "https://github.com/cycleuser/WinGetGUI"
Issues = "https://github.com/cycleuser/WinGetGUI/issues"

[tool.setuptools.dynamic]
version = { attr = "wingetgui.__version__" }

[tool.setuptools.packages.find]
include = ["wingetgui*"]

[tool.setuptools.package-data]
wingetgui = [
    "resources/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]